import 'package:equatable/equatable.dart';

/// status : true
/// message : "Success"
/// data : {"id":10000,"name":"balatest","email":"bala.future3@gmail.com","mobileNumber":"7418230370","categoryId":1,"password":"Password@123","address":"ZaminMuthur","latitude":"10.67521200","longitude":"76.96882200","profilePhoto":"uploads/biriyani.jpg","firebaseId":"1213","createdBy":10000,"createdOn":"2023-10-28T01:38:38.000Z","updatedBy":10000,"updatedOn":"2023-12-26T04:22:13.000Z","deleteFla

class LoginResponse extends Equatable {
  LoginResponse({
    bool? status,
    String? message,
    Data? data,
...
